# blog-minder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
src/blog_minder/: blog_integrity_crew.py  content_consolidation_crew.py  content_enhancement_crew.py  content_improvement_crew.py  content_integrity_crew.py  content_performance_analyzer_crew.py  crew.py  main.py
src/blog_minder/config/: agents.yaml  tasks.yaml
src/blog_minder/tools/: blog_posts_downloader.py  blog_posts_enhancers.py  blog_posts_manager.py  blog_posts_reader.py  cannibalization_content_identifier.py  content_merger.py  content_quality_analyzer.py  csv_reader.py  keyword_analyzer.py  seo_performance_analyzer.py
src/config/: agents.yaml  tasks.yaml
src/tools/: blog_posts_reader.py  cannibalization_content_identifier.py  csv_reader.py  seo_keyword_suggestion.py  wordpress_reader.py
tests/: test_wordpress_reader.py
